--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,7 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.anticon.anticon-cross-circle.ant-calendar-picker-clear {
+  display: none;
+}
